# numerical-analysis

./: LICENSE  README.md  main.py  makefile  pyproject.toml  requirements.txt
src/: diff_equations.py  diff_integration.py  interpolation.py  single_variable.py
src/numerical/: array.py  bag.py  curve.py  graph.py  matrix.py  model.py  priority_queue.py  queue.py  stack.py  utils.py
